<resources>
    <string name="app_name">AccA</string>
    <string name="app_name_full">Advanced Charging Controller App</string>
    <string name="title_activity_log_view">Logs</string>
    <string name="title_activity_log_view_file_name">Logs</string>
    <string name="tile_acc_no_root">No Root</string>
    <string name="tile_acc_enabled">Daemon running</string>
    <string name="tile_acc_disabled">Daemon stopped</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profiles">Profiles</string>
    <string name="title_scripts">Scripts</string>
    <string name="title_schedules">Schedules</string>
    <string name="title_settings">Settings</string>
    <string name="title_acc">ACC</string>
    <string name="title_acc_daemon">ACC Daemon</string>
    <string name="acc_daemon_status_running">ACC Daemon is Running</string>
    <string name="acc_daemon_status_not_running">ACC Daemon is Not Running</string>
    <string name="acc_daemon_status_reading_status">Reading ACC Daemon Status...</string>
    <string name="menu_stop_accd">Stop ACC Daemon</string>
    <string name="menu_start_accd">Start ACC Daemon</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title_battery">Battery</string>
    <string name="info_status">Status:</string>
    <string name="info_charging_speed">Charging Speed:</string>
    <string name="info_discharging_speed">Current Now:</string>
    <string name="info_capacity">Capacity:</string>
    <string name="info_temperature">Temperature:</string>
    <string name="info_health">Health:</string>
    <string name="info_profile">Profile:</string>
    <string name="info_status_extended">%1$s (%2$s)</string>
    <string name="info_charging_speed_extended">%1$d mA at %2$.2fV</string>
    <string name="info_discharging_speed_extended">%1$d mA</string>
    <string name="item_profile_capacity_label">Capacity:</string>
    <string name="item_profile_temperature_label">Temperature:</string>
    <string name="status_label">Status:</string>
    <string name="battery_info_label">Info:</string>
    <string name="reset_unplugged">Reset battery stats on unplug</string>
    <string name="reset_stats">Reset battery stats</string>
    <string name="enable_cooldown">Enable cooldown cycle:</string>
    <string name="cooldown_capacity">Start cooling down at %%:</string>
    <string name="resume_charge">Resume charging at:</string>
    <string name="stop_charge">Stop charging at:</string>
    <string name="enable_temp_check">Enable temperature control (°C)</string>
    <string name="cooldown_temp">Cooldown temp:</string>
    <string name="max_temp">Max temp:</string>
    <string name="pause_seconds">Pause seconds:</string>
    <string name="charge_seconds">Charge seconds:</string>
    <string name="shutdown_capacity">Shutdown (if not charging) at:</string>
    <string name="no_root_message">AccA requires ROOT.</string>
    <string name="config_error_title">Config parse error</string>
    <string name="config_error_dialog">Failed to parse ACC config!\nPlease check whether \"su -c acc --set --print\" works.</string>
    <string name="wait">Please wait...\nThis will take a few seconds.</string>
    <string name="title_exit_on_boot">Stop daemon after applying settings</string>
    <string name="description_exit_on_boot">This is used for writing to control files on boot.</string>
    <string name="label_on_boot">apply_on_boot:</string>
    <string name="installing_acc">Installing ACC</string>
    <string name="reboot">Reboot</string>
    <string name="acc_installation_failed">Please archive and send logcat and /data/adb/acc-data/logs/ to the developers
        at t.me/acc_group/ or github.com/MatteCarra/AccA/issues/.
    </string>
    <string name="acc_installation_failed_title">ACC Installation Failed!</string>
    <string name="install_djs_title">DJS is Required</string>
    <string name="install_djs_description">For this feature to work, we must enable DJS.
        \nDJS (Daily Job Scheduler) is a lightweight add-on for scheduling ACC profiles/settings.
        \nDJS daemon will be started on boot alongside ACC\'s.
    </string>
    <string name="installing_djs">Installing DJS</string>
    <string name="djs_installation_failed">Please archive and send logcat and /data/adb/djs-data/logs/ to the developers
        at t.me/acc_group/ or github.com/MatteCarra/AccA/issues/.
    </string>
    <string name="djs_installation_failed_title">DJS Installation Failed!</string>
    <string name="voltage_control_file_not_set">Not set.</string>
    <string name="edit_on_boot">Edit apply_on_boot settings</string>
    <string name="edit_on_boot_dialog_hint">Leave blank to disable</string>
    <string name="save">Save</string>
    <string name="edit_on_boot_dialog_message">Example: /sys/kernel/fast_charge/force_fast_charge::1::0
        --exit.\n\"--exit\" is optional; it tells the daemon to stop after applying settings.
    </string>
    <string name="logs">Logs</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard!</string>
    <string name="log_file_not_found_title">Log file not found</string>
    <string name="unsaved_changes">You have unsaved changes</string>
    <string name="close_without_saving">Discard</string>
    <string name="edit_config">Edit config</string>
    <string name="unsaved_changes_message">Save changes?</string>
    <string name="create_acc_profile">Create config profile</string>
    <string name="profile_label">Profile</string>
    <string name="profile_name">Profile name</string>
    <string name="script_name">Script name</string>
    <string name="dialog_profile_name_message">Enter the name you want assigned to this profile:</string>
    <string name="dialog_script_name_message">Enter the name you want assigned to this script:</string>
    <string name="no_profiles">No Profiles</string>
    <string name="no_scripts">No Scripts</string>
    <string name="profile_not_selected">Custom settings</string>
    <string name="profile_tile_label">Profile: %1$s</string>
    <string name="profile_update">Profile update</string>
    <string name="profiles_text_view">Profiles (long press to edit/delete):</string>
    <string name="restart">Restart</string>
    <string name="invalid_chars">The profile name contains invalid characters</string>
    <string name="recurrent_schedule">Run only once</string>
    <string name="execution_time">Execution time</string>
    <string name="new_config">New custom config</string>
    <string name="new_script">New script</string>
    <string name="enable_voltage_limit">Custom charging voltage limit</string>
    <string name="enable_current_limit">Custom charging current limit</string>
    <string name="voltage_control_file">Voltage control file:</string>
    <string name="edit_power_limit">Edit current and voltage limits</string>
    <string name="voltage_max">Max voltage (millivolts):</string>
    <string name="disabled">Disabled</string>
    <string name="schedule_recurrent_row_text">Recurrent Job scheduled for %1$02d:%2$02d</string>
    <string name="schedule_execute_once_row_title">Exec. Once - %1$02d:%2$02d</string>
    <string name="schedule_execute_once_row_text">Job scheduled for %1$02d:%2$02d</string>
    <string name="schedule_boot_row_text">Boot job scheduled</string>
    <string name="schedule_time">%1$02d:%2$02d</string>
    <string name="delete">Delete</string>
    <string name="no_schedules">No schedules set</string>
    <string name="wrong_volt_file">Either the chosen file does not work, or your kernel doesn\'t support this feature.</string>
    <string name="invalid_voltage_max">The value should be a number between 3700 and 4300 (millivolts)</string>
    <string name="edit_charging_switch">Edit charging switch</string>
    <string name="test_switch">Test charging switch</string>
    <string name="no_option_selected">No option selected; please select one!</string>
    <string name="charging_switch_works">Selected charging switch works!</string>
    <string name="charging_switch_does_not_work">Selected charging switch fails!</string>
    <string name="plug_battery_to_test">Plug the charger and try again!</string>
    <string name="automatic">Automatic</string>
    <string name="script_label">Script name:</string>
    <string name="script_description">Description:</string>
    <string name="script_body_text">Shell text:</string>
    <string name="menu_option_run">Run</string>
    <string name="menu_option_run_silent">Run (Silent)</string>
    <string name="menu_option_edit">Edit</string>
    <string name="menu_option_copy">Copy</string>
    <string name="menu_option_rename">Rename</string>
    <string name="menu_option_delete">Delete</string>
    <string name="current_measure_unit_preference_title">Input Current unit of measure</string>
    <string name="current_measure_unit_preference_description">ACC retrieves charging information from the sys interface.
        Some systems express current in µA (microamps), others in mA (milliamps).
        If the detected unit is incorrect, you can set it manually.
    </string>
    <string name="voltage_measure_unit_preference_title">Input Voltage unit of measure</string>
    <string name="voltage_measure_unit_preference_title_description">ACC retrieves charging information from the sys interface.
        Some systems express voltage in µV (microvolts), others in mV (millivolts).
        If the detected unit is incorrect, you can set it manually.
    </string>
    <string name="units_of_measure">Units of measure</string>
    <string name="acc_version_preference_title">ACC version</string>
    <string name="acc_version_preference_description">You can choose the ACC variant to use: bundled (stable, recommended for most users), master (stable), develop (bleeding edge but not necessarily unstable) or any of the tagged versions.
        Bundled is the most extensively tested version for AccA - thus it\'s the recommended choice.
        While not guaranteed, other variants are generally safe.
    </string>
    <string name="ui_options">User Interface</string>
    <string name="theme_option_setting">Theme</string>
    <string name="theme_option_summary">Set the apps\'s theme.</string>
    <string name="experimental_pref_title">Experimental Tools</string>
    <string name="experimental_pref_summary">Here you can disable the sending commands to the ACC service, which after execution, give freezing\\failure\\restarting the device. Some devices on MediaTek.</string>
    <string name="cue_AccCurrentMax_pref_title">AccCurrentMax</string>
    <string name="cue_AccCurrentMax_pref_summary">Enable send \"acca —set —current\" command</string>
    <string name="cue_AccVoltControl_pref_title">AccVoltControl</string>
    <string name="cue_AccVoltControl_pref_summary">Enable send \"acca -set —voltage\" command</string>
    <string name="lang_pref_title">Language</string>
    <string name="lang_pref_summary">Select the application language. After selecting you need to restart the application</string>
    <string name="qwa_open_acc">Open ACCA</string>
    <string name="qwa_start">Start Widgets</string>
    <string name="qwa_setting">Setting Widget</string>
    <string name="qwa_profile">Select profile</string>
    <string name="qwa_exit_label">Click Outside to Exit</string>
    <string name="swd_main">Main</string>
    <string name="swd_text">Text</string>
    <string name="swd_background">Background</string>
    <string name="swd_show_field_names">Show field names</string>
    <string name="swd_replace_to_symbols">Replace names symbols</string>
    <string name="swd_show_field_values">Show units of measure</string>
    <string name="swd_show_status">Show status</string>
    <string name="swd_show_curr">Show current</string>
    <string name="swd_show_temp">Show temperature</string>
    <string name="swd_show_volt">Show Voltage</string>
    <string name="swd_show_profile">Show profile</string>
</resources>